--- a/cog.yaml
+++ b/cog.yaml
@@ -10,6 +10,7 @@ build:
     - espeak-ng
   python_version: "3.11"
   python_packages:
+    - numpy<2
     - torch==2.1.0
     - torchaudio==2.1.0 
     - xformers
@@ -17,7 +18,7 @@ build:
     - whisperx==3.1.1
     - openai-whisper>=20231117
   run:
-    - git clone https://github.com/facebookresearch/audiocraft && pip install -e ./audiocraft
+    - git clone https://github.com/facebookresearch/audiocraft -b magnet_v1 && pip install -e ./audiocraft
     - pip install "pydantic<2.0.0"
     - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.6.0/pget_linux_x86_64" && chmod +x /usr/local/bin/pget
     - mkdir -p /root/.cache/torch/hub/checkpoints/ && wget --output-document "/root/.cache/torch/hub/checkpoints/wav2vec2_fairseq_base_ls960_asr_ls960.pth" "https://download.pytorch.org/torchaudio/models/wav2vec2_fairseq_base_ls960_asr_ls960.pth"
